--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chirper",
+  "name": "would-you-rather",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^5.1.0",
     "react": "^16.2.0",
-    "react-bootstrap": "^2.0.0-beta.5",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
